--- a/notes/commonGardenMeasurementProtocol.tex
+++ b/notes/commonGardenMeasurementProtocol.tex
@@ -25,9 +25,9 @@
 
 \section{Specific leaf area \& Leaf dry matter content}
 \begin{enumerate}
-\item From each individual, sample two twig sections from each individual, placing each in a labeled ziploc bag on ice. Twigs should be taken from branches with full sunlight, with healthy, fully expanded leaves.
+\item From each individual, sample two twig sections, placing each in a labeled ziploc bag on ice. Twigs should be taken from branches with full sunlight, with healthy, fully expanded leaves.
 \item Store samples in a cooler on ice or in a fridge until ready to process 
-\item From each two, haphazardly select one leaf, avoiding any with damage or disease. Remove the leaf petiole from each.
+\item From each twig, haphazardly select one leaf, avoiding any with damage or disease. Remove the leaf petiole from each.
 \item Pat the leaves dry and label each leaf with a sharpie in small, but legible font
 \item Scan each leaf using the flatbed scanner, each scan should include the 1-2 leaves depending on their size, a ruler for scale, and ensure that leaves do no touch each other or the edges of the scanner
 \item Weigh each leaf to the nearest hundredth of a mg
@@ -43,10 +43,10 @@
 
 \section{Stem specific density}
 \begin{enumerate}
-\item From each individual, cut a branch approximately 50cm from the terminal end (this is approximately the length of a ladies forearm to fingertips) 
+\item From each individual, cut a branch approximately 50cm from the terminal end 
 \item Cut from the proximal end 10cm of branch wood, placing the sample in the labeled bad with the leaf samples. Aim to take as uniform a branch sample as possible, ie avoid the insertion points of branches if possible.
 \item Remove loose bark or moss/lichen from the sample
-\item Determine fresh volume using the water displacement method: fill the appropriately sized graduated cylinder with water. Place cylinder on the balance and tare. Completely submerge the wood sample under the water using fine nosed tweezers. Ensure the sample is not touching the sides fo the cylinder. Record the increase in mass caused by the water displacement. This is equivalent to the sample volume in cm3
+\item Determine fresh volume using the water displacement method: fill the appropriately sized graduated cylinder with water. Place the cylinder on the balance and tare. Completely submerge the wood sample under the water using fine nosed tweezers. Ensure the sample is not touching the sides fo the cylinder. Record the increase in mass caused by the water displacement. This is equivalent to the sample volume in cm3
 \item Dry the stems with the leaves for 24h at 65C to preserve them temporarily for shipping
 \item Dry the stems at 101C for 48 hours prior to weighing
 \item Weight dried stems 
@@ -55,20 +55,20 @@
 
 \section{Things to purchase/find:}
 \begin{itemize}
-\item Envelopes - Amazon basics box 500 \$16 USD
 \item Extendable measuring rod \$46 USD
-\item Ziploc bags - 50?
+\item Envelopes - box 500 
+\item Ziploc bags - 50
 \item Cooler + ice packs
 \item Pruners
 \item Scissors 
+\item Fine nose tweezers
 \end{itemize}
 
 \section{Things to bring with us:}
 
 \begin{itemize}
 \item Flatbed scanners - 2x
-\item Computers with scanner software - Deirdre's + one other?
+\item Computers with scanner software - 2x
 \item Graduated cylinder
-\item Portable scale? 
 \end{itemize}
 \end{document}
